@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="/form/notebook/page[@id='general']" position="after">
-        <page string="Company" col="2" id="company">
-            <label name="parent"/>
-            <field name="parent"/>
-        </page>
-    </xpath>
-</data>
