@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree>
-    <field name="name"/>
-    <field name="short_name"/>
-    <field name="parent" tree_invisible="1"/>
-    <field name="children" tree_invisible="1"/>
-</tree>
