@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form>
-    <label name="kind"/>
-    <field name="kind" widget="selection"/>
-    <label name="reference"/>
-    <field name="reference"/>
-</form>
