@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="/form/group/field[@name='is_person']" position="replace"/>
-</data>
